Update Crime in San Francisco.ipynb

--- a/Crime in San Francisco.ipynb
+++ b/Crime in San Francisco.ipynb
@@ -214,6 +214,7 @@
     "Apparently it is quite safe to own a car in Tenderloin as it will probably not get stolen.\n",
     "\n",
     "On the other hand, categories like Assault and Drug/Narcotic crimes are unusually high in this district. Maybe they are related? Sounds probable, but further studies can explore that.\n",
+    "But from the graphs it becomes evident, that the pattern of crime in Tenderloin differs from the pattern in San Francisco at a whole.\n",
     "\n",
     "### Want to watch the world burn? Tenderloin is not for you.\n",
     "Let's assume, that you like fire. And you like it so much, that you would love to see a car burn as often as possible.\n",
